Added synonyms for monkey

--- a/public/index.html
+++ b/public/index.html
@@ -335,8 +335,8 @@
       <li><div><img src="graphics/emojis/pig_nose.png">:<span class="name" data-alternative-name="animal, oink">pig_nose</span>:</div></li>
       <li><div><img src="graphics/emojis/cow.png">:<span class="name" data-alternative-name="animal, beef, ox, nature, moo, milk">cow</span>:</div></li>
       <li><div><img src="graphics/emojis/boar.png">:<span class="name" data-alternative-name="animal, nature">boar</span>:</div></li>
-      <li><div><img src="graphics/emojis/monkey_face.png">:<span class="name" data-alternative-name="animal, nature, circus">monkey_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/monkey.png">:<span class="name" data-alternative-name="animal, nature, banana, circus">monkey</span>:</div></li>
+      <li><div><img src="graphics/emojis/monkey_face.png">:<span class="name" data-alternative-name="animal, nature, circus, ape">monkey_face</span>:</div></li>
+      <li><div><img src="graphics/emojis/monkey.png">:<span class="name" data-alternative-name="animal, nature, banana, circus, ape">monkey</span>:</div></li>
       <li><div><img src="graphics/emojis/horse.png">:<span class="name" data-alternative-name="animal, brown, nature, unicorn">horse</span>:</div></li>
       <li><div><img src="graphics/emojis/racehorse.png">:<span class="name" data-alternative-name="animal, gamble, luck">racehorse</span>:</div></li>
       <li><div><img src="graphics/emojis/camel.png">:<span class="name" data-alternative-name="animal, nature, hot, desert, hump">camel</span>:</div></li>
