--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
       <a href="http://morfy.org/">Morfy</a>,
       <a href="https://bitbucket.org/">Bitbucket</a>,
       <a href="https://gitter.im/">Gitter</a>,
-	  <a href="https://github.com/datenstrom/yellow-plugins/tree/master/emojiawesome)">Yellow</a>,
+      <a href="http://datenstrom.se/yellow/">Yellow</a>,
       and <a href="https://youtube.com">YouTube</a>.
     </p>
 
