--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png">:<span class="name" data-alternative-name="face, love, like, affection, valentines, infatuation">kissing_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/flushed.png">:<span class="name" data-alternative-name="flustered, embarassed, face, blush, shy, flattered">flushed</span>:</div></li>
       <li><div><img src="graphics/emojis/relieved.png">:<span class="name" data-alternative-name="face, relaxed, phew, massage, happiness">relieved</span>:</div></li>
-      <li><div><img src="graphics/emojis/satisfied.png">:<span class="name">satisfied</span>:</div></li>
+      <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented","pleased">satisfied</span>:</div></li>
       <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile, face, joy">grin</span>:</div></li>
       <li><div><img src="graphics/emojis/wink.png">:<span class="name" data-alternative-name="flirt, face, happy, mischievous, secret">wink</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue_winking_eye</span>:</div></li>
@@ -146,7 +146,7 @@
       <li><div><img src="graphics/emojis/open_mouth.png">:<span class="name" data-alternative-name="face, surprise, impressed, wow">open_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png">:<span class="name" data-alternative-name="baffled, puzzled, face, indifference, huh, weird, hmmm">confused</span>:</div></li>
-      <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh">hushed</span>:</div></li>
+      <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh,conceal,hide">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png">:<span class="name" data-alternative-name="deadpan, face, indifferent, -_-, meh">expressionless</span>:</div></li>
       <li><div><img src="graphics/emojis/unamused.png">:<span class="name" data-alternative-name="sarcasm, indifference, bored, straight face, serious">unamused</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_smile.png">:<span class="name" data-alternative-name="happy, relief, face, hot, laugh">sweat_smile</span>:</div></li>
@@ -177,7 +177,7 @@
       <li><div><img src="graphics/emojis/imp.png">:<span class="name" data-alternative-name="devil, angry, horns">imp</span>:</div></li>
       <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns">smiling_imp</span>:</div></li>
       <li><div><img src="graphics/emojis/neutral_face.png">:<span class="name" data-alternative-name="indifference, meh">neutral_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty">no_mouth</span>:</div></li>
+      <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent">no_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/innocent.png">:<span class="name" data-alternative-name="angel, face, heaven, halo">innocent</span>:</div></li>
       <li><div><img src="graphics/emojis/alien.png">:<span class="name" data-alternative-name="extraterrestrial, UFO, paul, weird, outer_space">alien</span>:</div></li>
       <li><div><img src="graphics/emojis/yellow_heart.png">:<span class="name" data-alternative-name="love, like, affection, valentines">yellow_heart</span>:</div></li>
@@ -197,7 +197,7 @@
       <li><div><img src="graphics/emojis/star2.png">:<span class="name" data-alternative-name="night, sparkle, awesome, good, magic">star2</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy.png">:<span class="name" data-alternative-name="star, sparkle, shoot, magic">dizzy</span>:</div></li>
       <li><div><img src="graphics/emojis/boom.png">:<span class="name" data-alternative-name="explosion, bomb, explode, collision, blown">boom</span>:</div></li>
-      <li><div><img src="graphics/emojis/collision.png">:<span class="name">collision</span>:</div></li>
+      <li><div><img src="graphics/emojis/collision.png">:<span class="name" data-alternative-name="accident,fight,boom">collision</span>:</div></li>
       <li><div><img src="graphics/emojis/anger.png">:<span class="name" data-alternative-name="angry, mad">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png">:<span class="name" data-alternative-name="heavy_exclamation_mark, danger, surprise, punctuation, wow, warning">exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/question.png">:<span class="name" data-alternative-name="doubt, confused">question</span>:</div></li>
@@ -464,7 +464,7 @@
       <li><div><img src="graphics/emojis/tv.png">:<span class="name" data-alternative-name="television, technology, program, oldschool, show">tv</span>:</div></li>
       <li><div><img src="graphics/emojis/iphone.png">:<span class="name" data-alternative-name="technology, apple, gadgets, dial">iphone</span>:</div></li>
       <li><div><img src="graphics/emojis/phone.png">:<span class="name" data-alternative-name="technology, communication, dial, telephone">phone</span>:</div></li>
-      <li><div><img src="graphics/emojis/telephone.png">:<span class="name">telephone</span>:</div></li>
+      <li><div><img src="graphics/emojis/telephone.png">:<span class="name" data-alternative-name="calling">telephone</span>:</div></li>
       <li><div><img src="graphics/emojis/telephone_receiver.png">:<span class="name" data-alternative-name="technology, communication, dial">telephone_receiver</span>:</div></li>
       <li><div><img src="graphics/emojis/pager.png">:<span class="name" data-alternative-name="bbcall, oldschool, 90s">pager</span>:</div></li>
       <li><div><img src="graphics/emojis/fax.png">:<span class="name" data-alternative-name="communication, technology">fax</span>:</div></li>
@@ -517,7 +517,7 @@
       <li><div><img src="graphics/emojis/e-mail.png">:<span class="name" data-alternative-name="mail, send, communication, inbox, email">e-mail</span>:</div></li>
       <li><div><img src="graphics/emojis/inbox_tray.png">:<span class="name" data-alternative-name="email, documents">inbox_tray</span>:</div></li>
       <li><div><img src="graphics/emojis/outbox_tray.png">:<span class="name" data-alternative-name="inbox, email">outbox_tray</span>:</div></li>
-      <li><div><img src="graphics/emojis/envelope.png">:<span class="name">envelope</span>:</div></li>
+      <li><div><img src="graphics/emojis/envelope.png">:<span class="name" data-alternative-name="message">envelope</span>:</div></li>
       <li><div><img src="graphics/emojis/incoming_envelope.png">:<span class="name" data-alternative-name="email, inbox">incoming_envelope</span>:</div></li>
       <li><div><img src="graphics/emojis/postal_horn.png">:<span class="name" data-alternative-name="instrument, music">postal_horn</span>:</div></li>
       <li><div><img src="graphics/emojis/mailbox_closed.png">:<span class="name" data-alternative-name="email, communication, inbox">mailbox_closed</span>:</div></li>
@@ -599,7 +599,7 @@
       <li><div><img src="graphics/emojis/mahjong.png">:<span class="name" data-alternative-name="game, play, chinese, kanji">mahjong</span>:</div></li>
       <li><div><img src="graphics/emojis/clapper.png">:<span class="name" data-alternative-name="movie, film, record">clapper</span>:</div></li>
       <li><div><img src="graphics/emojis/memo.png">:<span class="name" data-alternative-name="write, documents, stationery, pencil, paper, writing, legal, exam, quiz, test, study">memo</span>:</div></li>
-      <li><div><img src="graphics/emojis/pencil.png">:<span class="name">pencil</span>:</div></li>
+      <li><div><img src="graphics/emojis/pencil.png">:<span class="name" data-alternative-name="write">pencil</span>:</div></li>
       <li><div><img src="graphics/emojis/book.png">:<span class="name" data-alternative-name="open_book, read, library, knowledge, literature, learn, study">book</span>:</div></li>
       <li><div><img src="graphics/emojis/art.png">:<span class="name" data-alternative-name="design, paint, draw">art</span>:</div></li>
       <li><div><img src="graphics/emojis/microphone.png">:<span class="name" data-alternative-name="sound, music, PA">microphone</span>:</div></li>
@@ -612,8 +612,8 @@
       <li><div><img src="graphics/emojis/high_heel.png">:<span class="name" data-alternative-name="fashion, shoes, female, pumps, stiletto">high_heel</span>:</div></li>
       <li><div><img src="graphics/emojis/lipstick.png">:<span class="name" data-alternative-name="female, girl, fashion, woman">lipstick</span>:</div></li>
       <li><div><img src="graphics/emojis/boot.png">:<span class="name" data-alternative-name="shoes, fashion">boot</span>:</div></li>
-      <li><div><img src="graphics/emojis/shirt.png">:<span class="name" data-alternative-name="fashion, cloth, casual, tshirt, tee">shirt</span>:</div></li>
-      <li><div><img src="graphics/emojis/tshirt.png">:<span class="name">tshirt</span>:</div></li>
+      <li><div><img src="graphics/emojis/shirt.png">:<span class="name" data-alternative-name="fashion, cloth,formal">shirt</span>:</div></li>
+      <li><div><img src="graphics/emojis/tshirt.png">:<span class="name" data-alternative-name="fashion, cloth, casual,tee">tshirt</span>:</div></li>
       <li><div><img src="graphics/emojis/necktie.png">:<span class="name" data-alternative-name="shirt, suitup, formal, fashion, cloth, business">necktie</span>:</div></li>
       <li><div><img src="graphics/emojis/womans_clothes.png">:<span class="name" data-alternative-name="fashion, shopping, female">womans_clothes</span>:</div></li>
       <li><div><img src="graphics/emojis/dress.png">:<span class="name" data-alternative-name="clothes, fashion, shopping">dress</span>:</div></li>
@@ -966,7 +966,7 @@
       <li><div><img src="graphics/emojis/registered.png">:<span class="name" data-alternative-name="alphabet, circle">registered</span>:</div></li>
       <li><div><img src="graphics/emojis/tm.png">:<span class="name" data-alternative-name="trademark, brand, law, legal">tm</span>:</div></li>
       <li><div><img src="graphics/emojis/x.png">:<span class="name" data-alternative-name="no, delete, remove">x</span>:</div></li>
-      <li><div><img src="graphics/emojis/heavy_exclamation_mark.png">:<span class="name">heavy_exclamation_mark</span>:</div></li>
+      <li><div><img src="graphics/emojis/heavy_exclamation_mark.png">:<span class="name" data-alternative-name="shocked, surprised">heavy_exclamation_mark</span>:</div></li>
       <li><div><img src="graphics/emojis/bangbang.png">:<span class="name" data-alternative-name="exclamation, surprise">bangbang</span>:</div></li>
       <li><div><img src="graphics/emojis/interrobang.png">:<span class="name" data-alternative-name="wat, punctuation, surprise">interrobang</span>:</div></li>
       <li><div><img src="graphics/emojis/o.png">:<span class="name" data-alternative-name="circle, round">o</span>:</div></li>
