--- a/public/index.html
+++ b/public/index.html
@@ -130,8 +130,8 @@
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png">:<span class="name" data-alternative-name="face, love, like, affection, valentines, infatuation">kissing_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/flushed.png">:<span class="name" data-alternative-name="flustered, embarassed, face, blush, shy, flattered">flushed</span>:</div></li>
       <li><div><img src="graphics/emojis/relieved.png">:<span class="name" data-alternative-name="face, relaxed, phew, massage, happiness">relieved</span>:</div></li>
-      <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented","pleased">satisfied</span>:</div></li>
-      <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile, face, joy">grin</span>:</div></li>
+      <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented,pleased">satisfied</span>:</div></li>
+      <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile,face, joy">grin</span>:</div></li>
       <li><div><img src="graphics/emojis/wink.png">:<span class="name" data-alternative-name="flirt, face, happy, mischievous, secret">wink</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue_winking_eye</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_closed_eyes.png">:<span class="name" data-alternative-name="face, prank, playful, mischievous, smile">stuck_out_tongue_closed_eyes</span>:</div></li>
@@ -141,10 +141,10 @@
       <li><div><img src="graphics/emojis/stuck_out_tongue.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue</span>:</div></li>
       <li><div><img src="graphics/emojis/sleeping.png">:<span class="name" data-alternative-name="asleep, face, tired, sleepy, night, zzz">sleeping</span>:</div></li>
       <li><div><img src="graphics/emojis/worried.png">:<span class="name" data-alternative-name="frustrated, scared, face, concern, nervous">worried</span>:</div></li>
-      <li><div><img src="graphics/emojis/frowning.png">:<span class="name" data-alternative-name="face, aw, what">frowning</span>:</div></li>
+      <li><div><img src="graphics/emojis/frowning.png">:<span class="name" data-alternative-name="face, aw, what, disapprove">frowning</span>:</div></li>
       <li><div><img src="graphics/emojis/anguished.png">:<span class="name" data-alternative-name="face, stunned, nervous">anguished</span>:</div></li>
-      <li><div><img src="graphics/emojis/open_mouth.png">:<span class="name" data-alternative-name="face, surprise, impressed, wow">open_mouth</span>:</div></li>
-      <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth">grimacing</span>:</div></li>
+      <li><div><img src="graphics/emojis/open_mouth.png">:<span class="name" data-alternative-name="face, surprise, impressed, wow, shock">open_mouth</span>:</div></li>
+      <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth, smile">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png">:<span class="name" data-alternative-name="baffled, puzzled, face, indifference, huh, weird, hmmm">confused</span>:</div></li>
       <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh,conceal,hide">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png">:<span class="name" data-alternative-name="deadpan, face, indifferent, -_-, meh">expressionless</span>:</div></li>
@@ -177,13 +177,13 @@
       <li><div><img src="graphics/emojis/imp.png">:<span class="name" data-alternative-name="devil, angry, horns">imp</span>:</div></li>
       <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns">smiling_imp</span>:</div></li>
       <li><div><img src="graphics/emojis/neutral_face.png">:<span class="name" data-alternative-name="indifference, meh">neutral_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent">no_mouth</span>:</div></li>
+      <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent,speechless">no_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/innocent.png">:<span class="name" data-alternative-name="angel, face, heaven, halo">innocent</span>:</div></li>
       <li><div><img src="graphics/emojis/alien.png">:<span class="name" data-alternative-name="extraterrestrial, UFO, paul, weird, outer_space">alien</span>:</div></li>
       <li><div><img src="graphics/emojis/yellow_heart.png">:<span class="name" data-alternative-name="love, like, affection, valentines">yellow_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/blue_heart.png">:<span class="name" data-alternative-name="love, like, affection, valentines">blue_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/purple_heart.png">:<span class="name" data-alternative-name="love, like, affection, valentines">purple_heart</span>:</div></li>
-      <li><div><img src="graphics/emojis/heart.png">:<span class="name" data-alternative-name="love, like, valentines">heart</span>:</div></li>
+      <li><div><img src="graphics/emojis/heart.png">:<span class="name" data-alternative-name="love, like, valentines,affection">heart</span>:</div></li>
       <li><div><img src="graphics/emojis/green_heart.png">:<span class="name" data-alternative-name="love, like, affection, valentines">green_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/broken_heart.png">:<span class="name" data-alternative-name="heartbreak, sad, sorry, break">broken_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/heartbeat.png">:<span class="name" data-alternative-name="love, like, affection, valentines, pink">heartbeat</span>:</div></li>
@@ -197,10 +197,10 @@
       <li><div><img src="graphics/emojis/star2.png">:<span class="name" data-alternative-name="night, sparkle, awesome, good, magic">star2</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy.png">:<span class="name" data-alternative-name="star, sparkle, shoot, magic">dizzy</span>:</div></li>
       <li><div><img src="graphics/emojis/boom.png">:<span class="name" data-alternative-name="explosion, bomb, explode, collision, blown">boom</span>:</div></li>
-      <li><div><img src="graphics/emojis/collision.png">:<span class="name" data-alternative-name="accident,fight,boom">collision</span>:</div></li>
+      <li><div><img src="graphics/emojis/collision.png">:<span class="name" data-alternative-name="accident,fight,boom,explosion">collision</span>:</div></li>
       <li><div><img src="graphics/emojis/anger.png">:<span class="name" data-alternative-name="angry, mad">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png">:<span class="name" data-alternative-name="heavy_exclamation_mark, danger, surprise, punctuation, wow, warning">exclamation</span>:</div></li>
-      <li><div><img src="graphics/emojis/question.png">:<span class="name" data-alternative-name="doubt, confused">question</span>:</div></li>
+      <li><div><img src="graphics/emojis/question.png">:<span class="name" data-alternative-name="doubt, confused, what,how">question</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_exclamation.png">:<span class="name" data-alternative-name="surprise, punctuation, gray, wow, warning">grey_exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_question.png">:<span class="name" data-alternative-name="doubts, gray, huh">grey_question</span>:</div></li>
       <li><div><img src="graphics/emojis/zzz.png">:<span class="name" data-alternative-name="sleep, bored, sleepy, tired">zzz</span>:</div></li>
@@ -216,14 +216,14 @@
       <li><div><img src="graphics/emojis/thumbsup.png">:<span class="name" data-alternative-name="like">thumbsup</span>:</div></li>
       <li><div><img src="graphics/emojis/-1.png">:<span class="name" data-alternative-name="thumbsdown, no, dislike, hand">-1</span>:</div></li>
       <li><div><img src="graphics/emojis/thumbsdown.png">:<span class="name" data-alternative-name="dislike">thumbsdown</span>:</div></li>
-      <li><div><img src="graphics/emojis/ok_hand.png">:<span class="name" data-alternative-name="fingers, limbs, perfect">ok_hand</span>:</div></li>
+      <li><div><img src="graphics/emojis/ok_hand.png">:<span class="name" data-alternative-name="fingers, limbs, perfect, nice, good, wow">ok_hand</span>:</div></li>
       <li><div><img src="graphics/emojis/punch.png">:<span class="name" data-alternative-name="pound">punch</span>:</div></li>
       <li><div><img src="graphics/emojis/facepunch.png">:<span class="name" data-alternative-name="angry, violence, fist, hit, attack, hand">facepunch</span>:</div></li>
-      <li><div><img src="graphics/emojis/fist.png">:<span class="name" data-alternative-name="fingers, hand, grasp">fist</span>:</div></li>
+      <li><div><img src="graphics/emojis/fist.png">:<span class="name" data-alternative-name="fingers, hand, grasp, catch">fist</span>:</div></li>
       <li><div><img src="graphics/emojis/v.png">:<span class="name" data-alternative-name="peace, deuces, fingers, ohyeah, hand, victory, two">v</span>:</div></li>
       <li><div><img src="graphics/emojis/wave.png">:<span class="name" data-alternative-name="hi, hello, bye, hands, gesture, goodbye, solong, farewell, palm">wave</span>:</div></li>
       <li><div><img src="graphics/emojis/hand.png">:<span class="name" data-alternative-name="stop, fingers, highfive, palm, ban, raised_hand">hand</span>:</div></li>
-      <li><div><img src="graphics/emojis/raised_hand.png">:<span class="name" data-alternative-name="stop">raised_hand</span>:</div></li>
+      <li><div><img src="graphics/emojis/raised_hand.png">:<span class="name" data-alternative-name="stop,hand">raised_hand</span>:</div></li>
       <li><div><img src="graphics/emojis/open_hands.png">:<span class="name" data-alternative-name="fingers, butterfly">open_hands</span>:</div></li>
       <li><div><img src="graphics/emojis/point_up.png">:<span class="name" data-alternative-name="hand, fingers, direction">point_up</span>:</div></li>
       <li><div><img src="graphics/emojis/point_down.png">:<span class="name" data-alternative-name="fingers, hand, direction">point_down</span>:</div></li>
@@ -240,14 +240,14 @@
       <li><div><img src="graphics/emojis/running.png">:<span class="name" data-alternative-name="sport">running</span>:</div></li>
       <li><div><img src="graphics/emojis/couple.png">:<span class="name" data-alternative-name="pair, people, human, love, date, dating, like, affection, valentines, marriage">couple</span>:</div></li>
       <li><div><img src="graphics/emojis/family.png">:<span class="name" data-alternative-name="home, parents, child, mom, dad, father, mother, people, human">family</span>:</div></li>
-      <li><div><img src="graphics/emojis/two_men_holding_hands.png">:<span class="name" data-alternative-name="gay, pair, couple, love, like, bromance, friendship, people, human">two_men_holding_hands</span>:</div></li>
-      <li><div><img src="graphics/emojis/two_women_holding_hands.png">:<span class="name" data-alternative-name="gay, pair, friendship, couple, love, like, female, people, human, lesbian">two_women_holding_hands</span>:</div></li>
+      <li><div><img src="graphics/emojis/two_men_holding_hands.png">:<span class="name" data-alternative-name="gay, pair, couple, love, like, bromance, friendship, people, human, bond">two_men_holding_hands</span>:</div></li>
+      <li><div><img src="graphics/emojis/two_women_holding_hands.png">:<span class="name" data-alternative-name="gay, pair, friendship, couple, love, like, female, people, human, lesbian, bond">two_women_holding_hands</span>:</div></li>
       <li><div><img src="graphics/emojis/dancer.png">:<span class="name" data-alternative-name="party, female, girl, woman, fun">dancer</span>:</div></li>
       <li><div><img src="graphics/emojis/dancers.png">:<span class="name" data-alternative-name="party, female, bunny, women, girls">dancers</span>:</div></li>
       <li><div><img src="graphics/emojis/ok_woman.png">:<span class="name" data-alternative-name="women, girl, female, pink, human">ok_woman</span>:</div></li>
       <li><div><img src="graphics/emojis/no_good.png">:<span class="name" data-alternative-name="female, girl, woman, nope">no_good</span>:</div></li>
       <li><div><img src="graphics/emojis/information_desk_person.png">:<span class="name" data-alternative-name="female, girl, woman, human">information_desk_person</span>:</div></li>
-      <li><div><img src="graphics/emojis/raising_hand.png">:<span class="name" data-alternative-name="female, girl, woman">raising_hand</span>:</div></li>
+      <li><div><img src="graphics/emojis/raising_hand.png">:<span class="name" data-alternative-name="female, girl, woman, agree">raising_hand</span>:</div></li>
       <li><div><img src="graphics/emojis/bride_with_veil.png">:<span class="name" data-alternative-name="couple, marriage, wedding">bride_with_veil</span>:</div></li>
       <li><div><img src="graphics/emojis/person_with_pouting_face.png">:<span class="name" data-alternative-name="female, girl, woman">person_with_pouting_face</span>:</div></li>
       <li><div><img src="graphics/emojis/person_frowning.png">:<span class="name" data-alternative-name="female, girl, woman, sad, depressed, discouraged, unhappy">person_frowning</span>:</div></li>
