--- a/public/index.html
+++ b/public/index.html
@@ -703,30 +703,30 @@
       <li><div><img src="graphics/emojis/convenience_store.png">:<span class="name" data-alternative-name="building, shopping, groceries">convenience_store</span>:</div></li>
       <li><div><img src="graphics/emojis/love_hotel.png">:<span class="name" data-alternative-name="building, like, affection, dating">love_hotel</span>:</div></li>
       <li><div><img src="graphics/emojis/hotel.png">:<span class="name" data-alternative-name="building, whotel, accomodation, checkin">hotel</span>:</div></li>
-      <li><div><img src="graphics/emojis/wedding.png">:<span class="name" data-alternative-name="building, love, like, affection, couple, marriage, bride, groom">wedding</span>:</div></li>
+      <li><div><img src="graphics/emojis/wedding.png">:<span class="name" data-alternative-name="building, love, like, affection, couple, marriage, bride, groom, church, heart">wedding</span>:</div></li>
       <li><div><img src="graphics/emojis/church.png">:<span class="name" data-alternative-name="building, religion, christ">church</span>:</div></li>
       <li><div><img src="graphics/emojis/department_store.png">:<span class="name" data-alternative-name="building, shopping, mall">department_store</span>:</div></li>
       <li><div><img src="graphics/emojis/european_post_office.png">:<span class="name" data-alternative-name="building, email">european_post_office</span>:</div></li>
       <li><div><img src="graphics/emojis/city_sunrise.png">:<span class="name" data-alternative-name="photo, good morning, dawn">city_sunrise</span>:</div></li>
       <li><div><img src="graphics/emojis/city_sunset.png">:<span class="name" data-alternative-name="photo, evening, sky, buildings">city_sunset</span>:</div></li>
-      <li><div><img src="graphics/emojis/japanese_castle.png">:<span class="name" data-alternative-name="photo, building">japanese_castle</span>:</div></li>
+      <li><div><img src="graphics/emojis/japanese_castle.png">:<span class="name" data-alternative-name="photo, building, asia">japanese_castle</span>:</div></li>
       <li><div><img src="graphics/emojis/european_castle.png">:<span class="name" data-alternative-name="building, royalty, history">european_castle</span>:</div></li>
       <li><div><img src="graphics/emojis/tent.png">:<span class="name" data-alternative-name="camping, photo, camp, outdoors">tent</span>:</div></li>
       <li><div><img src="graphics/emojis/factory.png">:<span class="name" data-alternative-name="building, industry, pollution, smoke">factory</span>:</div></li>
-      <li><div><img src="graphics/emojis/tokyo_tower.png">:<span class="name" data-alternative-name="photo, japanese">tokyo_tower</span>:</div></li>
-      <li><div><img src="graphics/emojis/japan.png">:<span class="name" data-alternative-name="nation, country, japanese, asia">japan</span>:</div></li>
+      <li><div><img src="graphics/emojis/tokyo_tower.png">:<span class="name" data-alternative-name="photo, japanese, asia">tokyo_tower</span>:</div></li>
+      <li><div><img src="graphics/emojis/japan.png">:<span class="name" data-alternative-name="nation, country, japanese, asia, island">japan</span>:</div></li>
       <li><div><img src="graphics/emojis/mount_fuji.png">:<span class="name" data-alternative-name="photo, mountain, nature, japanese">mount_fuji</span>:</div></li>
       <li><div><img src="graphics/emojis/sunrise_over_mountains.png">:<span class="name" data-alternative-name="view, vacation, photo">sunrise_over_mountains</span>:</div></li>
       <li><div><img src="graphics/emojis/sunrise.png">:<span class="name" data-alternative-name="morning, view, vacation, photo">sunrise</span>:</div></li>
-      <li><div><img src="graphics/emojis/stars.png">:<span class="name" data-alternative-name="night, photo">stars</span>:</div></li>
-      <li><div><img src="graphics/emojis/statue_of_liberty.png">:<span class="name" data-alternative-name="american, newyork">statue_of_liberty</span>:</div></li>
+      <li><div><img src="graphics/emojis/stars.png">:<span class="name" data-alternative-name="night, photo, falling, sky, bright">stars</span>:</div></li>
+      <li><div><img src="graphics/emojis/statue_of_liberty.png">:<span class="name" data-alternative-name="american, newyork, monument, head">statue_of_liberty</span>:</div></li>
       <li><div><img src="graphics/emojis/bridge_at_night.png">:<span class="name" data-alternative-name="photo, sanfrancisco">bridge_at_night</span>:</div></li>
-      <li><div><img src="graphics/emojis/carousel_horse.png">:<span class="name" data-alternative-name="photo, carnival">carousel_horse</span>:</div></li>
-      <li><div><img src="graphics/emojis/rainbow.png">:<span class="name" data-alternative-name="nature, happy, unicorn, photo, sky, spring">rainbow</span>:</div></li>
+      <li><div><img src="graphics/emojis/carousel_horse.png">:<span class="name" data-alternative-name="photo, carnival, ride">carousel_horse</span>:</div></li>
+      <li><div><img src="graphics/emojis/rainbow.png">:<span class="name" data-alternative-name="nature, happy, unicorn, photo, sky, spring, color">rainbow</span>:</div></li>
       <li><div><img src="graphics/emojis/ferris_wheel.png">:<span class="name" data-alternative-name="photo, carnival, londoneye">ferris_wheel</span>:</div></li>
       <li><div><img src="graphics/emojis/fountain.png">:<span class="name" data-alternative-name="photo, summer, water, fresh">fountain</span>:</div></li>
-      <li><div><img src="graphics/emojis/roller_coaster.png">:<span class="name" data-alternative-name="carnival, playground, photo, fun">roller_coaster</span>:</div></li>
-      <li><div><img src="graphics/emojis/ship.png">:<span class="name" data-alternative-name="vehicle, transportation, titanic, deploy">ship</span>:</div></li>
+      <li><div><img src="graphics/emojis/roller_coaster.png">:<span class="name" data-alternative-name="carnival, playground, photo, ride, fun">roller_coaster</span>:</div></li>
+      <li><div><img src="graphics/emojis/ship.png">:<span class="name" data-alternative-name="vehicle, transportation, titanic, deploy, cruise">ship</span>:</div></li>
       <li><div><img src="graphics/emojis/speedboat.png">:<span class="name" data-alternative-name="vehicle, ship, transportation, summer">speedboat</span>:</div></li>
       <li><div><img src="graphics/emojis/boat.png">:<span class="name" data-alternative-name="vehicle, ship, summer, transportation, water, sailing, sailboat">boat</span>:</div></li>
       <li><div><img src="graphics/emojis/sailboat.png">:<span class="name" data-alternative-name="vehicle">sailboat</span>:</div></li>
