Added habitica to pages list.

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,8 @@
       <a href="https://bitbucket.org/">Bitbucket</a>,
       <a href="https://gitter.im/">Gitter</a>,
       <a href="http://datenstrom.se/yellow/">Yellow</a>,
-      <a href="https://youtube.com">YouTube</a>
+      <a href="https://youtube.com">YouTube</a>,
+      <a href="https://habitica.com">Habitica</a>
       and <a href="http://www.mattermost.org/">Mattermost</a>
     </p>
 
