Temp fix to get ZeroClipboard working
It looks like it can't be loaded from cdnjs in later Chrome versions.
https://github.com/zeroclipboard/zeroclipboard/issues/632

The long term fix is to use something else to get copy to work. SWF
doesn't really feel like the future ;)

Ref #371

--- a/public/index.html
+++ b/public/index.html
@@ -1074,7 +1074,7 @@
       </p>
     </div>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.min.js"></script>
+    <script src="zero-clipboard.min.js"></script>
     <script src="script.js?7"></script>
   </body>
 </html>
