--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,9 @@
       <a href="https://gitter.im/">Gitter</a>,
       <a href="http://datenstrom.se/yellow/">Yellow</a>,
       <a href="https://youtube.com">YouTube</a>,
-      <a href="https://habitica.com">Habitica</a>
-      and <a href="http://www.mattermost.org/">Mattermost</a>
+      <a href="https://habitica.com">Habitica</a>,
+      <a href="http://www.mattermost.org/">Mattermost</a>
+      and <a href="http://kanbantool.com/">Kanban Tool</a>
     </p>
 
     <p>
