Added various synonyms
Signed-off-by: shaishavgandhi05 <shaishgandhi@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
       <li><div><img src="graphics/emojis/sunglasses.png">:<span class="name" data-alternative-name="shades, face, cool, smile, summer, beach">sunglasses</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy_face.png">:<span class="name" data-alternative-name="ko, spent, unconscious, xox">dizzy_face</span>:</div></li>
       <li><div><img src="graphics/emojis/imp.png">:<span class="name" data-alternative-name="devil, angry, horns">imp</span>:</div></li>
-      <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns">smiling_imp</span>:</div></li>
+      <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns, evil">smiling_imp</span>:</div></li>
       <li><div><img src="graphics/emojis/neutral_face.png">:<span class="name" data-alternative-name="indifference, meh">neutral_face</span>:</div></li>
       <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent">no_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/innocent.png">:<span class="name" data-alternative-name="angel, face, heaven, halo">innocent</span>:</div></li>
@@ -216,17 +216,17 @@
       <li><div><img src="graphics/emojis/poop.png">:<span class="name" data-alternative-name="shit, turd">poop</span>:</div></li>
       <li><div><img src="graphics/emojis/shit.png">:<span class="name" data-alternative-name="poop">shit</span>:</div></li>
       <li><div><img src="graphics/emojis/plus1.png">:<span class="name" data-alternative-name="thumbsup, yes, awesome, good, agree, accept, cool, hand, like">+1</span>:</div></li>
-      <li><div><img src="graphics/emojis/thumbsup.png">:<span class="name" data-alternative-name="like">thumbsup</span>:</div></li>
+      <li><div><img src="graphics/emojis/thumbsup.png">:<span class="name" data-alternative-name="like, approve">thumbsup</span>:</div></li>
       <li><div><img src="graphics/emojis/-1.png">:<span class="name" data-alternative-name="thumbsdown, no, dislike, hand">-1</span>:</div></li>
       <li><div><img src="graphics/emojis/thumbsdown.png">:<span class="name" data-alternative-name="dislike">thumbsdown</span>:</div></li>
       <li><div><img src="graphics/emojis/ok_hand.png">:<span class="name" data-alternative-name="fingers, limbs, perfect">ok_hand</span>:</div></li>
-      <li><div><img src="graphics/emojis/punch.png">:<span class="name" data-alternative-name="pound">punch</span>:</div></li>
+      <li><div><img src="graphics/emojis/punch.png">:<span class="name" data-alternative-name="pound, fist bump">punch</span>:</div></li>
       <li><div><img src="graphics/emojis/facepunch.png">:<span class="name" data-alternative-name="angry, violence, fist, hit, attack, hand">facepunch</span>:</div></li>
       <li><div><img src="graphics/emojis/fist.png">:<span class="name" data-alternative-name="fingers, hand, grasp">fist</span>:</div></li>
       <li><div><img src="graphics/emojis/v.png">:<span class="name" data-alternative-name="peace, deuces, fingers, ohyeah, hand, victory, two">v</span>:</div></li>
       <li><div><img src="graphics/emojis/wave.png">:<span class="name" data-alternative-name="hi, hello, bye, hands, gesture, goodbye, solong, farewell, palm">wave</span>:</div></li>
       <li><div><img src="graphics/emojis/hand.png">:<span class="name" data-alternative-name="stop, fingers, highfive, palm, ban, raised_hand">hand</span>:</div></li>
-      <li><div><img src="graphics/emojis/raised_hand.png">:<span class="name" data-alternative-name="stop">raised_hand</span>:</div></li>
+      <li><div><img src="graphics/emojis/raised_hand.png">:<span class="name" data-alternative-name="stop, high five, highfive">raised_hand</span>:</div></li>
       <li><div><img src="graphics/emojis/open_hands.png">:<span class="name" data-alternative-name="fingers, butterfly">open_hands</span>:</div></li>
       <li><div><img src="graphics/emojis/point_up.png">:<span class="name" data-alternative-name="hand, fingers, direction">point_up</span>:</div></li>
       <li><div><img src="graphics/emojis/point_down.png">:<span class="name" data-alternative-name="fingers, hand, direction">point_down</span>:</div></li>
